# pathtracer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Light.cpp  Light.h  Material.cpp  Material.h  Object.h  Path Tracer.vcxproj  Path Tracer.vcxproj.filters  README.md  Ray.cpp  Ray.h  Renderer.cpp  Scene.cpp  Skybox.cpp  Skybox.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Util.h  main.cpp
Debug/: Path Tracer.pch  vc141.idb
Debug/Path Tracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Path Tracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: Path Tracer.pch
Release/Path Tracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Path Tracer.lastbuildstate
inc/: Light.h  Object.h  Ray.h  Scene.h  Triangle.h
output/: test1580158177.ppm  test1580185434.ppm  test1580256519.ppm  test1580256612.ppm  test1580256674.ppm  test1580256766.ppm  test1580257133.ppm
src/: CMakeLists.txt  Camera.cpp  Color.cpp  Light.cpp  Material.cpp  Object.cpp  Plane.cpp  Ray.cpp  Renderer.cpp  Rotation.cpp  Scene.cpp  Skybox.cpp  Sphere.cpp  Triangle.cpp  Util.cpp  Vec3.cpp  main.cpp
src/headers/: Camera.h  Color.h  Light.h  Material.h  Object.h  Ray.h  Renderer.h  Scene.h  Skybox.h  Sphere.h  Util.h  Vec3.h
src/inc/: Camera.h  Color.h  Object.h  Plane.h  Ray.h  Renderer.h  Scene.h  Skybox.h  Sphere.h  Triangle.h  Util.h
